[gd_scene load_steps=8 format=2]

[ext_resource path="res://wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/hull.gd" type="Script" id=2]
[ext_resource path="res://hook.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/dir_light.png" type="Texture" id=4]
[ext_resource path="res://assets/open_van.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 52, 16 )

[node name="hull" type="RigidBody2D"]
collision_layer = 16
input_pickable = true
mass = 178.8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="wheelR1" parent="." instance=ExtResource( 1 )]
position = Vector2( 40, 14 )

[node name="wheelR2" parent="." instance=ExtResource( 1 )]
position = Vector2( -40, 14 )

[node name="wheelL1" parent="." instance=ExtResource( 1 )]
position = Vector2( 40, -14 )

[node name="wheelL2" parent="." instance=ExtResource( 1 )]
position = Vector2( -41, -14 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
modulate = Color( 0.788235, 0.658824, 0.843137, 1 )
z_index = 5
polygon = PoolVector2Array( -44, -16, 43, -16, 48, -13, 48, 13, 43, 16, -43, 16, -48, 13, -48, -13 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
modulate = Color( 0.0784314, 0.027451, 0.509804, 0.741176 )
z_index = 6
polygon = PoolVector2Array( 27, -14, 40, -13, 48, 0, 40, 13, 27, 15, 30, 9, 30, -8 )

[node name="hook0" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 0 )

[node name="hook1" parent="." instance=ExtResource( 3 )]
position = Vector2( -48, 0 )
rotation = 3.14159

[node name="top_light" type="Light2D" parent="."]
visible = false
position = Vector2( 48, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
offset = Vector2( -27, 2 )
texture_scale = 0.16

[node name="loco" type="Sprite" parent="."]
position = Vector2( -0.335048, 0.0743337 )
rotation = -1.5708
scale = Vector2( 0.728053, 0.848583 )
z_index = 20
texture = ExtResource( 5 )

[node name="car" type="Sprite" parent="."]
visible = false
position = Vector2( -0.0377379, 0.182425 )
rotation = -1.5708
scale = Vector2( 0.733075, 0.867778 )
z_index = 20
texture = ExtResource( 5 )

[node name="text_pose" type="Node2D" parent="."]
position = Vector2( 5, -8 )
rotation = 1.5708
scale = Vector2( 0.445, 0.506 )
z_index = 30

[node name="id" type="Label" parent="text_pose"]
modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
margin_right = 38.0
margin_bottom = 14.0
text = "0000"
align = 1
valign = 2

[node name="move_platform" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="move_platform"]
shape = SubResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_hull_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_hull_mouse_exited"]
[connection signal="area_entered" from="move_platform" to="." method="_on_move_platform_area_entered"]
